<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinnerPrefixo"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/prefixo_array" />

            <EditText
                android:id="@+id/etProjetoNumero"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="2"
                android:hint="@string/hint_projeto_generico"
                android:inputType="text"
                android:maxLength="10" />
        </LinearLayout>

        <EditText
            android:id="@+id/etData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/hint_data_requisicao" />

        <AutoCompleteTextView
            android:id="@+id/etRequisitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="Respons&#225;vel (Encarregado/Supervisor)"
            android:inputType="text"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:focusable="false"
            android:hint="Almoxarife"
            android:inputType="text"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/btnAvancar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/btn_avancar" />
    </LinearLayout>
</ScrollView>
